refactor: logic conditional render context

--- a/src/styles/components/form/_signup.scss
+++ b/src/styles/components/form/_signup.scss
@@ -224,3 +224,10 @@
     }
   }
 }
+
+.signup_infor {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
