--- a/src/styles/components/form/_signup.scss
+++ b/src/styles/components/form/_signup.scss
@@ -226,8 +226,24 @@
 }
 
 .signup_infor {
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: 70vh;
+}
+.signup_infor label {
+  background: $purple;
+  padding: 0.75rem 3rem;
+  color: $white;
+  font-weight: 600;
+  width: 50%;
+  border-radius: 1rem;
+  cursor: pointer;
+}
+.signup_infor button {
+  padding: 1rem 3rem;
+  font-weight: 600;
+  border-radius: 0.5rem;
 }
